syntax = "proto3";

package recall;

option go_package = "./recall";

// 召回服务
service Recall {
  // 召回接口
  rpc Recall(RecallRequest) returns (RecallResponse);
  // 视频索引查询
  rpc VideoIndex(VideoIndexRequest) returns (VideoIndexResponse);
}

// 召回请求
message RecallRequest {
  int64 mid = 1;                     // 用户ID
  string buvid = 2;                  // 设备ID
  int32 total_limit = 3;             // 总召回数量限制
  repeated RecallInfo infos = 4;     // 召回策略信息列表
  string trace_id = 5;               // 追踪ID
}

// 召回策略信息
message RecallInfo {
  string name = 1;           // 召回策略名称
  string tag = 2;            // Redis key
  int32 limit = 3;           // 召回数量
  string filter = 4;         // 过滤器类型（如bloomfilter）
  int32 priority = 5;        // 优先级
  string scorer = 6;         // 打分器类型
}

// 召回响应
message RecallResponse {
  repeated RecallItem list = 1;      // 召回结果列表
  int32 total = 2;                   // 总数
  map<string, string> debug_info = 3; // 调试信息
}

// 召回项
message RecallItem {
  int64 avid = 1;                    // 视频AV号
  double score = 2;                  // 召回分数
  string recall_type = 3;            // 召回类型
  string recall_tag = 4;             // 召回标签（Redis key）
  int32 priority = 5;                // 优先级
  map<string, string> extra = 6;     // 额外信息
}

// 视频索引查询请求
message VideoIndexRequest {
  repeated int64 avids = 1;          // 视频AV号列表
}

// 视频索引查询响应
message VideoIndexResponse {
  repeated VideoIndex list = 1;      // 视频索引列表
}

// 视频索引
message VideoIndex {
  int64 avid = 1;                    // 视频AV号
  BasicInfo basic_info = 2;          // 基本信息
}

// 视频基本信息
message BasicInfo {
  int64 avid = 1;                    // 视频AV号
  int64 mid = 2;                     // UP主MID
  string title = 3;                  // 标题
  int32 zone_id = 4;                 // 分区ID
  int32 duration = 5;                // 时长
  int64 pub_time = 6;                // 发布时间
  int32 state = 7;                   // 状态
  repeated Tag tags = 8;             // 标签列表
  
  // 全站统计
  int64 play_hive = 9;               // 全站播放量
  int64 likes_hive = 10;              // 全站点赞数
  int64 fav_hive = 11;                // 全站收藏数
  int64 reply_hive = 12;             // 全站评论数
  int64 share_hive = 13;              // 全站分享数
  int64 coin_hive = 14;               // 全站投币数
  
  // 月度统计
  int64 play_month = 15;              // 近30天播放量
  int64 likes_month = 16;             // 近30天点赞数
  int64 reply_month = 17;             // 近30天评论数
  int64 share_month = 18;             // 近30天分享数
  int64 play_month_finish = 19;       // 近30天完播量
}

// 标签
message Tag {
  int64 tag_id = 1;                  // 标签ID
  string tag_name = 2;               // 标签名称
  int32 tag_type = 3;                // 标签类型
}

